--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "next-app",
+  "name": "netsec-arcade",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "framer-motion": "^11.15.0",
+    "lucide-react": "^0.469.0"
+  },
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "15.5.4"
   }
 }
