--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/core": "^1.0.1",
+    "@langchain/openai": "^1.0.0",
+    "@xenova/transformers": "^2.17.2",
+    "chromadb": "^3.0.17",
+    "framer-motion": "^11.15.0",
+    "fs-extra": "^11.3.2",
+    "langchain": "^1.0.1",
+    "lucide-react": "^0.469.0",
     "next": "15.5.4",
+    "openai": "^6.6.0",
+    "pdf-parse": "^2.4.5",
+    "pptx-parser": "^1.1.7-beta.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "framer-motion": "^11.15.0",
-    "lucide-react": "^0.469.0"
+    "unzipper": "^0.12.3",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "eslint": "^8",
