--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.15.0",
+    "lucide-react": "^0.469.0",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "framer-motion": "^11.15.0",
-    "lucide-react": "^0.469.0"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@types/node": "24.10.0",
+    "@types/react": "19.2.2",
     "eslint": "^8",
     "eslint-config-next": "15.5.4"
   }
